--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 		<link rel="stylesheet" type="text/css" href="css\reset.css">
 		<link rel="stylesheet" type="text/css" href="css\bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css\stilo.css">
+
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		
 	</head>
 
 	<body>
 	<main>
 	<nav class="menu" >
+		<div class="fundo"></div>
 		<div class="container">
 				<div class="row " >
 			  		
@@ -36,15 +39,53 @@
 		<section class="soft">	
 		
 			<div class="container">
+				<div class="fundo"></div>
 				<div class="row" >
 					<div class="col-md-12 text-center">
 					<h2> Soft, Sweet & Never too heavy</h2>
 					<h3>The most significant fruit ever, Banana.</h3>
-					<img src="img/banana.png" alt="Banana">
+					<img src="img/banana.png" alt="Banana"/>
+					<h3 class="tour">Banana tour</h3>
 					</div>
+
 				</div>
 			</div>
 			
+		</section>
+		<section id="colors">
+			<div class="container">
+
+				<div class="row" >
+					<div class="col-md-12 text-center">
+						<h2>Comes in different colors</h2>
+						<p>Every type of banana has a uniquness inside it, its's own taste.</br>
+						Choose a banana on basis of your favorite colour and taste.</p>
+					</div>
+				</div>
+
+				<div class="row" >
+					<div class="col-md-4 text-center">
+						<img src="img/banana-red.png" class="responsive" alt="Banana Red"  />
+						<h3>Red Banana</h3>
+						<span>Sweet& creamy</span></br>
+						<span>with a hint of Raspberry</span>
+					</div><div class="col-md-4 text-center">
+						<img src="" alt=""/>
+						<img src="img/banana-amarela.png" class="responsive" alt="Banana Yellow"  />
+						<h3>Yellow Banana</h3>
+						<span>Sweet& creamy</span></br>
+						<span>with a hint of Raspberry</span>
+
+					</div>
+					<div class="col-md-4 text-center">
+						<img src="img/banana-verde.png" class="responsive" alt="Banana Green"  />
+						<img src="" alt=""/>
+						<h3>Green Banana</h3>
+						<span>Sweet& creamy</span></br>
+						<span>with a hint of Raspberry</span>
+					</div>
+				</div>
+			</div>	
 		</section>
 	</main>
 	</body>
