--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 				<div class="row" >
 					<div class="col-md-12 text-center">
-						<h2>Comes in different colors</h2>
+						<h2>Comes in different <span class="titulo-colors"> colors</span></h2>
 						<p>Every type of banana has a uniquness inside it, its's own taste.</br>
 						Choose a banana on basis of your favorite colour and taste.</p>
 					</div>
@@ -86,6 +86,39 @@
 					</div>
 				</div>
 			</div>	
+		</section>
+		<section id="nutrients">
+			<div class="container">
+				<div class="row" >
+					<div class="col-md-12 text-center">
+						<h2>To Kow whats is inside,<span id="pell"> peel a Banana</span> </h2>
+						<p><span> Banana is full of nutrievnts you need,</span></br><span>it helps you to stay healthy and strong</span></p>
+					</div>
+				</div>
+				
+				<div class="row" >
+					<div class="col-md-2">
+						<div class=" img-fundo1 ">
+							<img src="img/banana1.png" class="responsive" alt=""/>
+						</div>
+						<div class=" img-fundo2 ">
+							<img src="img/banana-cortada.png" class="responsive" alt=""/>
+						</div>
+					</div>
+
+					<div class="col-md-10 text-center">
+						<div  class="banana-des">
+							<span class="linha">/</span><span class="linha1">/</span><span class="linha2">/</span>
+							<span class="calories">110</br> Calories</span></br></span>
+							<span class="vitamins">B6,C</br>Vitamins</span></br>
+							<img src="img/banana-d.png" alt=""/>
+							<span class="carbohydrate">30g</br> Carbohydrate</span></br></span>
+							<span class="protein">1g</br>Protein</span></br>
+						</div>
+					</div>
+				</div>
+			</div>
+			
 		</section>
 	</main>
 	</body>
