section casca-banana

--- a/index.html
+++ b/index.html
@@ -118,7 +118,46 @@
 					</div>
 				</div>
 			</div>
-			
+		</section>
+		<section id="casca-banana">
+			<div class="container">
+				<div class="row" >
+					<div class="col-md-12 text-center">
+						<img src="img/casca.png" class="fundo-esquerda" alt=""/>
+						<h2><span> Don't throw it away</span> or else you will slip & fall!</h2>
+						<p><span>Banana pell</span> is rich nutrients & carbohydrates.</br> You can use int in many ways.</p>
+						<img src="img/casca.png" class="fundo-direita" alt=""/>
+					</div>
+				</div>
+				<div class="row" >
+					<div class="col-md-4 text-center img1">
+						<img src="img/dente.png" class="responsive" alt=""/>
+						<div class="texto-img1">
+							<h3> Whiten teeth</h3>
+							<p>Rub banana pell on your teeth</p>
+							<img src="img/casca.png" class="fundo-esquerda" alt=""/>
+	 					</div>	
+	 					<img src="img/casca.png" class="fundo-besquerda" alt=""/>
+					</div>
+					<div class="col-md-4 text-center img2">
+						<img src="img/sapato.png" class="responsive" alt=""/>
+						<div class="texto-img2">
+							<h3> Whiten Shine your shoes</h3>
+							<p>Rub on shoes to clean and shine</p>
+						</div>
+						<img src="img/casca.png" class="fundo-bmeio" alt=""/>
+					</div>
+					<div class="col-md-4 text-center img3">
+						<img src="img/planta.png" class="responsive" alt=""/>
+						<div class="texto-img3">
+							<h3> Organic fertilizer</h3>
+							<p>To grow tomato plant</p>
+							<img src="img/casca.png" class="fundo-direita" alt=""/>
+						</div>
+						<img src="img/casca.png" class="fundo-bdireita" alt=""/>
+					</div>
+				</div>
+			</div>	
 		</section>
 	</main>
 	</body>
