section valor e rodape

--- a/index.html
+++ b/index.html
@@ -269,6 +269,51 @@
 				</div>		
 			</div>		
 		</section>
+		<section id="valor">
+			<div class="overlay"></div>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 text-center">
+						<h2><span>Try Banana,</span> Buy it now!</h2>
+						
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-4 text-center">
+						<h3>For <span>Solo</span></h3>
+						<img src="img/banana-uma.png" class="responsive" alt=""/>
+						<span class="just"></br>at just <i class="fa fa-inr" aria-hidden="true"></i> 6</span>
+						<p>Single sharing </br>Fits in your pocket</br>Highly nutrational</br>Eat anywhere</p>
+						<button class="botao-menu"> Buy int now</button>
+						 
+					</div>
+					<div class="col-md-4 text-center">
+						<h3>For <span>Couple</span></h3>
+						<img src="img/banana-duas.png" class="responsive" alt=""/>
+						<span class="just"> </br>at just <i class="fa fa-inr" aria-hidden="true"></i> 10</span>
+						<p>Double sharing </br>Double nutration</br>More delicious</br>Mini meal</p>
+						<button class="botao-menu"> Buy int now</button>
+					</div>
+					<div class="col-md-4 text-center">
+						<h3>For <span>Family</span></h3>
+						<img src="img/banana-f.png" class="responsive" alt=""/>
+						<span class="just"> </br>at just <i class="fa fa-inr" aria-hidden="true"></i> 15</span>
+						<p>Family sharing </br>Very nutritious</br>Honey bag</br>Make delicious dishes</p>
+						<button class="botao-menu"> Buy int now</button>
+					</div>
+				</div>
+			</div>
+		</section>
+		<footer id="rodape">
+			<div class="container">
+				<div class="row ">
+					<div class="col-md-12 text-center">
+						<small >Designed by Nirav Bhatt</small> <img src="img/simbolo.png" class="responsive" alt=""/>
+						<small > For all banana lovers out there</small>
+					</div>
+				</div>
+			</div>
+		</footer>
 		</main>
 		<script type="text/javascript" src="js/jquery.js.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
