--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 <body>
 	<main>
 		<header>	
-
 			<div id="menu">
 				<div class="fundo"></div>	
 				<nav  class="navbar navbar-default" role="navigation">
@@ -36,17 +35,15 @@
 								<li><a href="#">Features</a></li>
 								<li><a href="#">Use</a></li>
 								<li><a href="#">Review</a></li>
-								<li><a href="#"class="btn"><button class="botao-menu"> Buy int now</button></a></li>
+								<li><a href="#" class="btn1"><button class="botao-menu"> Buy int now</button></a></li>
 			      			</ul>
 			   			</div>
 			    	</div>
 			    </nav>
 			 </div> 
-	
 		</header>
 		
 		<section class="soft">	
-		
 			<div class="container">
 				<div class="fundo"></div>
 				<div class="row" >
@@ -56,7 +53,6 @@
 					<img src="img/banana.png"  class="responsive alt="Banana"/>
 					<h3 class="tour">Banana tour</h3>
 					</div>
-
 				</div>
 			</div>
 			
@@ -73,25 +69,29 @@
 				</div>
 
 				<div class="row" >
-					<div class="col-md-4 text-center">
+					<div class="col-md-4 ">
 						<img src="img/banana-red.png" class="responsive" alt="Banana Red"  />
-						<h3>Red Banana</h3>
-						<span>Sweet& creamy</span></br>
-						<span>with a hint of Raspberry</span>
-					</div><div class="col-md-4 text-center">
-						<img src="" alt=""/>
-						<img src="img/banana-amarela.png" class="responsive" alt="Banana Yellow"  />
-						<h3>Yellow Banana</h3>
-						<span>Sweet& creamy</span></br>
-						<span>with a hint of Raspberry</span>
-
+						<div class="text-center">
+							<h3>Red Banana</h3>
+							<span>Sweet& creamy</span></br>
+							<span>with a hint of Raspberry</span>
+						</div>
 					</div>
-					<div class="col-md-4 text-center">
+					<div class="col-md-4 ">
+						<img src="img/banana-amarela.png" class="responsive" alt="Banana Yellow"  />
+						<div class="text-center">
+							<h3>Yellow Banana</h3>
+							<span>Sweet& creamy</span></br>
+							<span>with a hint of Raspberry</span>
+						</div>
+					</div>
+					<div class="col-md-4">
 						<img src="img/banana-verde.png" class="responsive" alt="Banana Green"  />
-						<img src="" alt=""/>
-						<h3>Green Banana</h3>
-						<span>Sweet& creamy</span></br>
-						<span>with a hint of Raspberry</span>
+						<div class="text-center">
+							<h3>Green Banana</h3>
+							<span>Sweet& creamy</span></br>
+							<span>with a hint of Raspberry</span>
+						</div>
 					</div>
 				</div>
 			</div>	
@@ -211,7 +211,7 @@
 						</div>
 					</div>
 					
-					<div class="col-md-4 text-center prato-banana3">
+					<div class="col-md-4 text-center ">
 					<div class="prato-banana">
 						<img src="img/waffle.jpg" class="responsive" alt=""/>
 						<div class="texto-pranto-banana3">
